# concertina-helper

./: .flake8  .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  ci.sh  demo-api.sh  demo-cli.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.sh
.github/workflows/: ci.yml  docs.yml  test-api.yml  test-cli.yml
concertina-helper/: layouts.py
concertina_helper/: __init__.py  bisonoric.py  cli.py  concertina_helper.py  finger_finder.py  from_abc.py  layout_loader.py  layouts.py  note_generators.py  notes_on_layout.py  output_utils.py  penalties.py  tune_on_layout.py  type_defs.py  unisonoric.py  util.py  wheatstone-cg.yaml
concertina_helper/layouts/: 20_cg.yaml  30_jefferies_cg.yaml  __init__.py  base_classes.py  bisonoric.py  layout_loader.py  unisonoric.py
tests/: amelia-chords.abc  amelia-no-chords.abc  cherrytree.abc  g-major.abc  g-major.txt  test_bisonoric.py  test_cli.py  test_from_abc.py  test_layouts.py  test_notes_on_layout.py  test_penalties.py  test_tune_on_layout.py  test_type_defs.py  test_unisonoric.py
