[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "concertina_helper"
authors = [{name = "Chuck McCallum", email = "mccallucc@gmail.com"}]
readme = "README.md"
requires-python = "~=3.10"
license = {file = "LICENSE"}
classifiers = [
  "Private :: Do Not Upload",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
  "Topic :: Artistic Software"
]
dynamic = ["version", "description"]

# In general, dependencies should not be pinned to exact versions,
# but because these are both < v1.0, their interfaces could change
# unpredictably in a new release, so we'll pin for now.
dependencies = [
  "pyabc2==0.1.0.dev2",
  "astar==0.97",
  "pyyaml~=6.0"
]

[project.scripts]
from-abc = "concertina_helper.from_abc:main"

[project.urls]
Home = "https://github.com/mccalluc/concertina-helper"
